# last

./: README.md  check.py  frame_0672.txt  frame_2064.txt  reason.py  s_34.ipynb  s_89.ipynb  t3-py.py  train.py
CMakeProject1/: CMakeLists.txt
CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
